# fast-gnn-benchmark

./: .gitignore  LICENSE  Makefile  README.md  global_config_example.yml  pyproject.toml
configs/amazon_computer/: sage_full.yml  sage_parts.yml
configs/amazon_photo/: sage_full.yml  sage_parts.yml
configs/citeseer/: sage_full.yml  sage_parts.yml
configs/co_author_cs/: sage_full.yml  sage_parts.yml
configs/co_author_physics/: sage_full.yml  sage_parts.yml
configs/cora/: gat.yml  gcn.yml  gcn2.yml  mlp.yml  mlp_adjacency.yml  pmlp.yml  polynormer.yml  sage_full.yml  sage_parts.yml  sgc.yml  sgformer.yml
configs/implicit_regu/: arxiv_sage_full_lr_scale.yml  arxiv_sage_full_no_lr_scale.yml  arxiv_sage_parts.yml
configs/link_prediction/: gae_ppa.yml
configs/ogbn_arxiv/: gat_full.yml  gat_parts.yml  gcn_full.yml  gcn_parts.yml  sage_cluster.yml  sage_dropedge.yml  sage_full.yml  sage_neighbour.yml  sage_parts.yml  sage_replacement.yml  sage_saint.yml  sage_sgd.yml  sgformer_full.yml  sgformer_parts.yml
configs/ogbn_papers100M/: sage_on_disk.yml  sage_ram.yml
configs/ogbn_products/: gat.yml  gcn2.yml  gcn_full.yml  gcn_parts.yml  polynormer.yml  sage_cluster.yml  sage_dropedge.yml  sage_full.yml  sage_neighbour.yml  sage_parts.yml  sage_replacement.yml  sage_saint.yml  sgformer_full.yml  sgformer_parts.yml
configs/pokec/: gat_full.yml  gat_parts.yml  gcn_full.yml  gcn_parts.yml  sage_cluster.yml  sage_dropedge.yml  sage_full.yml  sage_light.yml  sage_neighbour.yml  sage_parts.yml  sage_replacement.yml  sage_saint.yml  sgformer_full.yml  sgformer_parts.yml
configs/pubmed/: sage_full.yml  sage_parts.yml
configs/sampling_experiments/: cora_sage_full.yml  cora_sage_neighbourhood.yml  products_sage_neighbour.yml  (+3 more)
orchestrators/: architecture_benchmark.py  homophilous_benchmark.py  sampling_benchmark.py  train_parts_impact.py  with_replacement.py
scripts/: benchmark_architecture.py  dropedge_sweep.py  main.py  ppr_loader_params_test.py  re_eval.py  run_benchmark.py  run_benchmark_small_homophilous.py  train_dropedge.py  train_parts_limit_arxiv.py  train_parts_limit_pokec.py  train_parts_limit_products.py  train_test_parts_grid.py  wandb_sweep_agent.py  wandb_sweep_launch.py  with_replacement.py
slurm/: architecture_benchmark.sh  benchmark.sh  benchmark_architecture.sh  drop_edge_sweep.sh  replacement.sh  sampling_properties.sh  sweep.sh  train_dropedge.sh  train_parts_impact.sh  train_parts_limit.sh  train_test_parts_grid.sh
(+114 files in other folders)
